Fixes a bug when searching apps in elementary. Title was hidden if too long.

--- a/usr/share/css/themes/elementary/elementary/desktop.css
+++ b/usr/share/css/themes/elementary/elementary/desktop.css
@@ -192,6 +192,7 @@ body {
 }
 #elementary-apps .apps-view-search li .app-title {
 	height: auto;
+	width: auto;
 	font-weight: bold;
 }
 #elementary-apps .apps-view-search li .app-description {
